# OneTjs

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  docker.cfg  local.example.cfg  manage.py  onetjs.example.cfg  onetjs.wsgi  requirements.txt  setup.cfg  uwsgi.ini
app/: __init__.py  admin_views.py  app.py  config.py  data.py  extensions.py  models.py  reverse_proxied.py  service.py  services_manager.py  tjs.py  user.py  utils.py  wsgi.py
app/admin_pages/: __init__.py  publish.py  views.py
app/data_access/: __init__.py  data.py  tjs.py
app/login/: __init__.py  forms.py  login.py  views.py
app/login/templates/: login.html  (+1 more)
app/models/: dataset.py  dataset_attribute.py  framework.py  models.py  service.py  services_manager.py
app/public_pages/: __init__.py  views.py
app/templates/: base.html  error.html  include_common_css.html  include_page_links.html  index.html  login.html  register.html  users.html
app/tjs/: __init__.py  data.py  views.py
data/: services.yml
data/misc/: frameworks.yml
data/region_hdf/: frameworks.yml
docker/: Dockerfile.apache  Dockerfile.uwsgi  apache_onetjs.conf  docker.cfg  uwsgi.ini
docs/: agregation.md  configuration.md  contributing.md  interoperability.md  sample_datasets.md  tjs_interoperability.md
onetjs/: __init__.py  app.py  config.py  reverse_proxied.py  wsgi.py  wsgi_apache.py
onetjs/models/: dataset_attribute.py  framework.py  services_manager.py
onetjs/public_pages/: views.py
onetjs/templates/: base.html  error.html
onetjs/tjs/: views.py
(+68 files in other folders)
