[metadata]
name = onetjs
version = attr: onetjs.__version__
description = TJS Server
long_description = file: README.md, CHANGELOG.md, LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires =
    Flask
    Flask-Bcrypt
    Flask-Bootstrap==3.3.7.1
    Flask-Script==2.0.6
    Flask-WTF==0.14.2
    PyYAML>=4.2b1
    mysql-connector-python
    pandas
    psycopg2
    xlrd==1.1.0
    python-decouple


[options.extras_require]
#setup = pytest-runner
#tests = pytest; pytest-flask; pytest-mock; freezegun; pytest-cov; pytest-vcr
dev = Flask-DebugToolbar; 

[aliases]
#test=pytest

